<package>
  <name>orb_slam</name>
  <version>0.0.0</version>
  <description>orb_slam</description>
  
  <maintainer email="raulmur@unizar.es">Raul Mur-Artal</maintainer>
  <author>Raul Mur-Artal</author>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>suitesparse</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
