<?xml version="1.0"?>
<package>
  <name>orbslam_dwo</name>
  <version>0.0.0</version>
  <description>The orbslam_dwo package</description>

  <maintainer email="huai.3@osu.edu">jianzhu</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/JzHuai0108/ORB_SLAM</url>

  <author email="huai.3@osu.edu">Jianzhu Huai</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend> <!-- for FindEigen.cmake -->
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>

  </export>
</package>
