ADD_LIBRARY(${LIB_PREFIX}solver_dense ${G2O_LIB_TYPE}
  solver_dense.cpp linear_solver_dense.h
)

TARGET_LINK_LIBRARIES(${LIB_PREFIX}solver_dense ${LIB_PREFIX}core)

INSTALL(TARGETS ${LIB_PREFIX}solver_dense
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)

FILE(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")

INSTALL(FILES ${headers} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/g2o/solvers/dense)
